[gd_scene load_steps=3 format=3 uid="uid://cfflw0tx2fgym"]

[ext_resource type="Script" uid="uid://h87w1ulw8h6c" path="res://Spells/Base Spell/base_spell.gd" id="1_olyt7"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_olyt7"]
size = Vector2(96, 96)

[node name="base_spell" type="Node2D"]
script = ExtResource("1_olyt7")
SPELL_ICON = SubResource("PlaceholderTexture2D_olyt7")

[node name="cooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="delayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="delayTimer" to="." method="_on_delay_timer_timeout"]
